syntax = "proto3";

package auth;

option go_package = "kamal.auth.v1;auth1";


service AuthService {
  // register new user
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // login new user and get jwt token
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

// TODO: add permission service